--- a/Sample.html
+++ b/Sample.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Welcome to Git hub</h1>
+    <h1>Welcome to GitHub</h1>
+    <p>This is newe para</p>
   </body>
-  
 </html>
